--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 byteorder = "1.4.3"
 clap = { version = "4.2.2", features = ["derive"] }
+tokio = { version = "1", features = ["full"]}
+warp = "0.3"
